--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,14 @@
-<div class="container">
-    <div class="up">
-        <div class="content">
-            <router-outlet></router-outlet>
-        </div>
-    </div>
-    <div class="down">
-    </div>
-</div>
+<div>
+    <p-menubar [model]="items" *ngIf="getIsShowTop">
+      <ng-template pTemplate="start" >
+        <img src="assets/imgs/logo.png" width="40" height="40" class="p-mr-2" style="position: relative;bottom:10px;">
+      </ng-template>
+      <!-- <input type="text" pInputText placeholder="Search"> -->
+      
+      <p-menu #menu [popup]="true" [model]="items2"></p-menu>
+      <img src="assets/imgs/avatar.png" style="width: 40px;height: 40px;position: relative;right: 1rem;cursor: pointer;" (click)="menu.toggle($event)"/>
+      <!-- <button type="button" pButton icon="pi pi-list" label="Show" (click)="menu.toggle($event)"></button> -->
+  </p-menubar>
+  <router-outlet></router-outlet>
+  </div>
+  
