--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,9 +6,11 @@
       <!-- <input type="text" pInputText placeholder="Search"> -->
       
       <p-menu #menu [popup]="true" [model]="items2"></p-menu>
-      <img src="assets/imgs/avatar.png" style="width: 40px;height: 40px;position: relative;right: 1rem;cursor: pointer;" (click)="menu.toggle($event)"/>
+      <img src="assets/imgs/avatar.png" style="width: 40px;height: 40px;position: relative;right: 2rem;bottom:0.5rem;cursor: pointer;" (click)="menu.toggle($event)"/>
       <!-- <button type="button" pButton icon="pi pi-list" label="Show" (click)="menu.toggle($event)"></button> -->
-  </p-menubar>
-  <router-outlet></router-outlet>
+    </p-menubar>
+    <div id="topPage">
+    <router-outlet></router-outlet>
+  </div>
   </div>
   
