--- a/src/app/pages/components/post_/post_.component.html
+++ b/src/app/pages/components/post_/post_.component.html
@@ -14,7 +14,7 @@
     </p-toolbar>
 
     <p-table #dt [value]="products" [rows]="10" [paginator]="true" [globalFilterFields]="['title','actionUrl','description','status']"
-        [(selection)]="selectedProducts" [rowHover]="true" dataKey="PostId"
+        [(selection)]="selectedProducts" [rowHover]="true" dataKey="postId"
         currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
         <ng-template pTemplate="caption">
             <div class="p-d-flex p-ai-center p-jc-between">
@@ -36,7 +36,9 @@
                 <th pSortableColumn="actionUrl">跳转连接 <p-sortIcon field="actionUrl"></p-sortIcon></th>
                 <th pSortableColumn="status">状态 <p-sortIcon field="status"></p-sortIcon></th>
                 <th pSortableColumn="createdDate">创建时间 <p-sortIcon field="createdDate"></p-sortIcon></th>
-                <th></th>
+                <th>
+                  <span style="color:red;">操作</span>
+                </th>
             </tr>
         </ng-template>
         <ng-template pTemplate="body" let-product>
@@ -63,13 +65,13 @@
         </ng-template>
     </p-table>
 </div>
-<!-- 
+
 <p-dialog [(visible)]="productDialog" [style]="{width: '450px'}" header="Product Details" [modal]="true" styleClass="p-fluid">
     <ng-template pTemplate="content">
         <div class="p-field">
-            <label for="name">Name</label>
-            <input type="text" pInputText id="name" [(ngModel)]="product.name" required autofocus />
-            <small class="p-invalid" *ngIf="submitted && !product.name">Name is required.</small>
+            <label for="name">title</label>
+            <input type="text" pInputText id="name" [(ngModel)]="product.title" required autofocus />
+            <small class="p-invalid" *ngIf="submitted && !product.title">title is required.</small>
         </div>
         <div class="p-field">
             <label for="description">Description</label>
@@ -77,36 +79,29 @@
         </div>
 
         <div class="p-field">
-            <label class="p-mb-3">Category</label>
+            <label class="p-mb-3">status</label>
             <div class="p-formgrid p-grid">
                 <div class="p-field-radiobutton p-col-6">
-                    <p-radioButton id="category1" name="category" value="Accessories" [(ngModel)]="product.category"></p-radioButton>
-                    <label for="category1">Accessories</label>
+                    <p-radioButton id="category1" name="category" value="0" [(ngModel)]="product.status"></p-radioButton>
+                    <label for="category1">正常</label>
                 </div>
                 <div class="p-field-radiobutton p-col-6">
-                    <p-radioButton id="category2" name="category" value="Clothing" [(ngModel)]="product.category"></p-radioButton>
-                    <label for="category2">Clothing</label>
-                </div>
-                <div class="p-field-radiobutton p-col-6">
-                    <p-radioButton id="category3" name="category" value="Electronics" [(ngModel)]="product.category"></p-radioButton>
-                    <label for="category3">Electronics</label>
-                </div>
-                <div class="p-field-radiobutton p-col-6">
-                    <p-radioButton id="category4" name="category" value="Fitness" [(ngModel)]="product.category"></p-radioButton>
-                    <label for="category4">Fitness</label>
+                    <p-radioButton id="category2" name="category" value="-1" [(ngModel)]="product.status"></p-radioButton>
+                    <label for="category2">屏蔽</label>
                 </div>
             </div>
         </div>
 
         <div class="p-formgrid p-grid">
             <div class="p-field p-col">
-                <label for="price">Price</label>
-                <p-inputNumber id="price" [(ngModel)]="product.price" mode="currency" currency="USD" locale="en-US"></p-inputNumber>
+                <label for="price">go to url</label>
+                <input type="text" pInputText id="url" [(ngModel)]="product.actionUrl" required autofocus />
+                <small class="p-invalid" *ngIf="submitted && !product.actionUrl">title is required.</small>
             </div>
-            <div class="p-field p-col">
+            <!-- <div class="p-field p-col">
                 <label for="quantity">Quantity</label>
                 <p-inputNumber id="quantity" [(ngModel)]="product.quantity"></p-inputNumber>
-            </div>
+            </div> -->
         </div>
     </ng-template>
     
@@ -114,6 +109,6 @@
         <button pButton pRipple label="Cancel" icon="pi pi-times" class="p-button-text" (click)="hideDialog()"></button>
         <button pButton pRipple label="Save" icon="pi pi-check" class="p-button-text" (click)="saveProduct()"></button>
     </ng-template>
-</p-dialog> -->
+</p-dialog>
 
 <p-confirmDialog [style]="{width: '450px'}"></p-confirmDialog>
