--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div>
     <p-menubar [model]="items" *ngIf="getIsShowTop">
       <ng-template pTemplate="start" >
-        <img src="assets/imgs/logo.png" width="40" height="40" class="p-mr-2" style="position: relative;bottom:10px;">
+        <img src="assets/imgs/logo.png" width="40" height="40" class="p-mr-2" style="position: relative;left:0.5rem;bottom:10px;margin-right: 1.5rem;">
       </ng-template>
       <!-- <input type="text" pInputText placeholder="Search"> -->
       
