--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,49 @@
+
+
+// Custom Theming for Angular Material
+// For more information: https://material.angular.io/guide/theming
+@import '~@angular/material/theming';
+// Plus imports for other components in your app.
+
+// Include the common styles for Angular Material. We include this here so that you only
+// have to load a single css file for Angular Material in your app.
+// Be sure that you only ever include this mixin once!
+@include mat-core();
+
+// Define the palettes for your theme using the Material Design palettes available in palette.scss
+// (imported above). For each palette, you can optionally specify a default, lighter, and darker
+// hue. Available color palettes: https://material.io/design/color/
+$leon-angular-learn-primary: mat-palette($mat-indigo);
+$leon-angular-learn-accent: mat-palette($mat-pink, A200, A100, A400);
+
+// The warn palette is optional (defaults to red).
+$leon-angular-learn-warn: mat-palette($mat-red);
+
+// Create the theme object. A theme consists of configurations for individual
+// theming systems such as "color" or "typography".
+$leon-angular-learn-theme: mat-light-theme((
+  color: (
+    primary: $leon-angular-learn-primary,
+    accent: $leon-angular-learn-accent,
+    warn: $leon-angular-learn-warn,
+  )
+));
+
+// Include theme styles for core and each component used in your app.
+// Alternatively, you can import and @include the theme mixins for each component
+// that you are using.
+@include angular-material-theme($leon-angular-learn-theme);
+// #my-video_html5_api{
+//   width: 100%;
+//   height: 95vh;
+// }
+// .vjs-loading-spinner{
+//   display: none;
+// }
+// .vjs-text-track-settings{
+//   display: none;
+// }
+
 /* You can add global styles to this file, and also import other style files */
 html,
 body {
@@ -5,6 +51,7 @@ body {
     height: 100%;
     // background-color:#303141 ;
     overflow-x: hidden;
+    // overflow-y: hidden;
     margin: 0px;
 }
 
@@ -21,3 +68,5 @@ img{
     display: block;
     text-align: -webkit-center;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
