--- a/src/app/live/live.component.html
+++ b/src/app/live/live.component.html
@@ -8,9 +8,12 @@
     current live id:{{liveId}}
   </p> -->
 
-  <video id="my-video" class="video-js vjs-big-play-centered" webkit-playsinline playsinline x5-playsinline x-webkit-airplay="allow" controls muted playsinline preload="auto" autoplay>
+
+  <div id="my-video"></div>
+
+  <!-- <video id="my-video" class="video-js vjs-big-play-centered" webkit-playsinline playsinline x5-playsinline x-webkit-airplay="allow" controls muted playsinline preload="auto" autoplay>
     <source src="http://livecast.yangqungongshe.com/live/283e7b855bb841088a4ba105c40d16ba.m3u8" type="application/x-mpegURL">
-</video>
+</video> -->
 <div>
 </div>
 
