--- a/src/app/pages/modules/dashboards/guild/detail-guild/detail-guild.component.html
+++ b/src/app/pages/modules/dashboards/guild/detail-guild/detail-guild.component.html
@@ -1,3 +1,11 @@
-<p>
-  detail-guild works!{{id}}
-</p>
+
+<div>
+  <p>
+    detail-guild works!{{id}}
+    
+  </p>
+<button value="点我" (click)="this.fristSubject.next('id')" >
+  
+
+</button>
+</div>
