--- a/src/styles.scss
+++ b/src/styles.scss
@@ -55,18 +55,23 @@ body {
     margin: 0px;
 }
 
-
+.p-panel .p-panel-content{
+  background-color: #e2e7ef;
+}
 
 img{
     border-radius: 20px;
     margin-top: 20px;
     max-width: 95%;
 }
-
+// @font-face {
+//   font-family: "demi";
+//   src: url("./assets/fonts/demi.otf");
+// }
 
 .center{
     display: block;
     text-align: -webkit-center;
 }
 html, body { height: 100%; }
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { margin: 0; }
