--- a/src/app/pages/modules/dashboards/guild/detail-guild/detail-guild.component.html
+++ b/src/app/pages/modules/dashboards/guild/detail-guild/detail-guild.component.html
@@ -28,8 +28,8 @@
         <app-basic-area id="monthLivecastCount" [req]="monthLivecastCount"  class="singleLine"></app-basic-area>
         <app-basic-area id="monthAbuseCount" [req]="monthAbuseCount"  class="singleLine"></app-basic-area>
 
-        <!-- <app-multi-area [req]="todayBlocMultiAreaObject" class="multiLine"></app-multi-area>
-        <app-multi-area [req]="todayBlocMultiAreaObject" class="multiLine"></app-multi-area> -->
+        <app-multi-area [req]="monthBlocMultiAreaObject" class="multiLine"></app-multi-area>
+        <!-- <app-multi-area [req]="todayBlocMultiAreaObject" class="multiLine"></app-multi-area> -->
 
       </div>
     </p-panel>
