--- a/src/app/pages/modules/dashboards/livecast/livecast.component.html
+++ b/src/app/pages/modules/dashboards/livecast/livecast.component.html
@@ -1,3 +1,77 @@
-<p>
-  livecast works!
-</p>
+<p-toast></p-toast>
+
+<div class="card">
+    <p-table #dt [value]="livecasts" [rows]="10" [paginator]="true" [globalFilterFields]="['title','guildId','livecastId']"
+        [(selection)]="selectedlivecasts" [rowHover]="true" dataKey="livecastId"
+        currentPageReportTemplate="Showing {first} to {last} of {totalRecords} entries" [showCurrentPageReport]="true">
+        <ng-template pTemplate="caption">
+            <div class="p-d-flex p-ai-center p-jc-between">
+                <h5 class="p-m-0">livecast Management</h5>
+                <span class="p-input-icon-left">
+                    <i class="pi pi-search"></i>
+                    <input pInputText type="text" (input)="dt.filterGlobal($event.target.value, 'contains')" placeholder="Search..." />
+                </span>
+            </div>
+        </ng-template>
+        <ng-template pTemplate="header">
+            <tr>
+                <th style="width: 3rem">
+                    <p-tableHeaderCheckbox></p-tableHeaderCheckbox>
+                </th>
+                <th pSortableColumn="guildId">教会ID <p-sortIcon field="guildId"></p-sortIcon></th>
+                <th pSortableColumn="livecastId">直播ID <p-sortIcon field="livecastId"></p-sortIcon></th>
+                <th pSortableColumn="title">标题 <p-sortIcon field="title"></p-sortIcon></th>
+                <!-- <th pSortableColumn="avatarUrl">封面图地址 <p-sortIcon field="avatarUrl"></p-sortIcon></th>
+                <th pSortableColumn="recordUrl">录播地址 <p-sortIcon field="recordUrl"></p-sortIcon></th> -->
+                <th pSortableColumn="createdDate">创建时间 <p-sortIcon field="createdDate"></p-sortIcon></th>
+                <th pSortableColumn="beginDate">开始时间 <p-sortIcon field="beginDate"></p-sortIcon></th>
+                <th pSortableColumn="endDate">结束时间 <p-sortIcon field="endDate"></p-sortIcon></th>
+                <th pSortableColumn="status">直播状态 <p-sortIcon field="status"></p-sortIcon></th>
+                <th pSortableColumn="creatorId">直播创建人ID <p-sortIcon field="creatorId"></p-sortIcon></th>
+                <th pSortableColumn="viewedReceiversCount">已查看人员数量 <p-sortIcon field="viewedReceiversCount"></p-sortIcon></th>
+                <th pSortableColumn="unviewedReceiversCount">未查看人员数量 <p-sortIcon field="unviewedReceiversCount"></p-sortIcon></th>
+                <th>
+                  <span style="color:red;">操作</span>
+                </th>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="body" let-livecast>
+            <tr>
+                <td>
+                    <p-tableCheckbox [value]="livecast"></p-tableCheckbox>
+                </td>
+                <td>{{livecast.guildId}}</td>
+                <td>{{livecast.livecastId}}</td>
+                <td>{{livecast.title}}</td>
+                <!-- <td>{{livecast.avatarUrl}}</td>
+                <td>{{livecast.recordUrl}}</td> -->
+                <td>{{livecast.createdDate}}</td>
+                <td>{{livecast.beginDate}}</td>
+                <td>{{livecast.endDate}}</td>
+                <td>{{livecast.status | dashboardspipe:"livecastStatus"}}</td>
+                <td>{{livecast.creatorId}}</td>
+                <td>{{livecast.viewedReceiversCount}}</td>
+                <td>{{livecast.unviewedReceiversCount}}</td>
+                <td>
+                    <button *ngIf="livecast.status!=0&&livecast.recordUrl==null;else elseBlock" disabled pButton pRipple icon="pi pi-eye" class="p-button-rounded p-mr-2" (click)="DetailLivecast(livecast)" ></button>
+                    <ng-template #elseBlock>
+                        <button pButton pRipple icon="pi pi-eye" class="p-button-rounded p-mr-2" (click)="DetailLivecast(livecast)" ></button>
+                    </ng-template>
+                </td>
+            </tr>
+        </ng-template>
+        <ng-template pTemplate="summary">
+            <div class="p-d-flex p-ai-center p-jc-between">
+                In total there are {{livecasts ? livecasts.length : 0 }} livecasts.
+            </div>
+        </ng-template>
+    </p-table>
+</div>
+
+
+
+<p-dialog [header]="showLivecast.recordUrl!=null?'录播视频':'直播视频'" [(visible)]="displayModal" [modal]="true" [style]="{width: '50vw'}" [baseZIndex]="10000"
+    [draggable]="false" [resizable]="false">
+      <app-mp4-video *ngIf="displayModal&&showLivecast.recordUrl!=null" [url]="showLivecast.recordUrl"></app-mp4-video>
+      <app-hls-video *ngIf="displayModal&&showLivecast.recordUrl==null" [url]="showLivecast.hlsPlayUrl"></app-hls-video>
+</p-dialog>
